# cli-tools

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/cli-core/: Cargo.toml
crates/cli-core/src/: lib.rs
crates/cli-core/src/config/: mod.rs
crates/cli-core/src/output/: csv_export.rs  formatter.rs  html.rs  json.rs  markdown.rs  mod.rs  table.rs
crates/cli-core/src/ui/: mod.rs
crates/code-cost/: Cargo.toml
crates/code-cost/src/: main.rs
crates/code-cost/src/analyzer/: mod.rs
crates/code-cost/src/calculator/: mod.rs
crates/code-cost/src/git/: mod.rs
crates/code-cost/src/metrics/: mod.rs
crates/work-summary/: Cargo.toml
crates/work-summary/src/: main.rs
crates/work-summary/src/analyzer/: contribution.rs  mod.rs  value_calculator.rs
crates/work-summary/src/git/: mod.rs  time_estimator.rs
crates/work-summary/src/patterns/: mod.rs
crates/work-summary/src/summary/: mod.rs
