[package]
name = "work-summary"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "work-summary"
path = "src/main.rs"

[dependencies]
cli-core = { path = "../cli-core" }

clap.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
git2.workspace = true
chrono.workspace = true
owo-colors.workspace = true
comfy-table.workspace = true
